# polyline

./: .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  route-geometry-sweden-west-coast.polyline6
.github/workflows/: rust.yml
.travis/: deploy.sh  deploy_key.pem.enc
benches/: benchmarks.rs
node/: README.md  package.json
node/lib/: index.js
node/native/: Cargo.toml
node/native/src/: lib.rs
src/: errors.rs  ffi.rs  lib.rs
