[package]
name = "polyline"
description = "Encoder and decoder for the Google Encoded Polyline format"
version = "0.9.0"
authors = ["Tom MacWright <tom@macwright.org>", "The GeoRust Developers"]
repository = "https://github.com/georust/polyline"
readme = "README.md"
keywords = ["polyline", "geo"]
license = "MIT/Apache-2.0"
edition = "2018"

[dependencies]
geo-types = ">=0.6, <0.8"

[dev-dependencies]
rand = "0.8.5"
criterion = "0.4"

[[bench]]
name = "benchmarks"
harness = false
