[package]
name = "polyline"
description = "Encoder and decoder for the Google Encoded Polyline format"
version = "0.10.2"
repository = "https://github.com/georust/polyline"
documentation = "https://docs.rs/polyline/"
readme = "README.md"
keywords = ["polyline", "geo", "gis"]
license = "MIT/Apache-2.0"
edition = "2021"
categories = ["science::geo"]

[dependencies]
geo-types = "0.7.8"

[dev-dependencies]
rand = "0.8.5"
criterion = "0.5.1"
flexpolyline = "0.1.0"

[lib]
bench = false

[[bench]]
name = "benchmarks"
harness = false
